:lipstick: style: add var for spacing and breakpoints, fix styles

--- a/src/assets/sass/_header.scss
+++ b/src/assets/sass/_header.scss
@@ -3,30 +3,16 @@
 .header {
   display: flex;
   justify-content: space-between;
+  column-gap: var.$spacing-sm;
+  align-items: center;
+
   margin-bottom: 40px;
-
-  form {
-    display: flex;
-    flex: 1;
-    border: 1px solid var.$dark;
-    padding: 15px 20px;
-    border-radius: 20px;
-
-    &:hover {
-      outline: 1px solid var.$dark;
-    }
-
-    input {
-      all: unset;
-      width: 100%;
-    }
-  }
 
   &__title-wrapper {
     display: flex;
     column-gap: 10px;
-    flex: 1;
     position: relative;
+    flex: 1;
 
     &__img-wrapper {
       width: auto;
@@ -56,16 +42,31 @@
     }
   }
 
+  form {
+    display: flex;
+    flex: 2;
+    border: 1px solid var.$dark;
+    padding: var.$spacing-sm;
+    border-radius: 20px;
+
+    &:hover {
+      outline: 1px solid var.$dark;
+    }
+
+    input {
+      width: 100%;
+    }
+  }
+
   &__menu {
     display: flex;
-    column-gap: 20px;
-    margin-right: 20px;
+    column-gap: var.$spacing-xs;
     flex: 1;
-    justify-content: end;
+    justify-content: flex-end;
 
     .select-btn,
     .toggle-btn {
-      padding: 10px;
+      padding: var.$spacing-xs;
       border-radius: 15px;
       cursor: pointer;
     }
@@ -77,14 +78,31 @@
   }
 }
 
-@media (max-width: 480px) {
+@media (max-width: var.$tablet) {
   .header {
     flex-direction: column;
-    row-gap: 20px;
-    margin-bottom: 20px;
+    row-gap: var.$spacing-sm;
+    width: 100%;
+    align-items: initial;
+
+    &__title-wrapper {
+      flex: none;
+      justify-content: center;
+
+      &__img-wrapper {
+        top: -10%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
+    }
+
+    form {
+      flex: 1;
+    }
 
     &__menu {
-      margin-right: 0px;
+      flex: none;
+      justify-content: center;
     }
   }
 }
