--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -12,10 +12,9 @@
 
 body {
   overflow-x: hidden;
-  width: 100vw;
-  height: 100vh;
   min-height: 100vh;
   max-width: 100vw;
+  width: 100vw;
   margin: 0;
 
   &:has(.dark) {
@@ -24,17 +23,12 @@ body {
   }
 }
 
-#root {
-  position: relative;
-  width: 100%;
+.app {
+  padding: var.$spacing-lg var.$spacing-xl;
   height: 100%;
-}
 
-.homepage {
-  padding: 60px;
-
-  @media (max-width: 480px) {
-    padding: 50px 10px;
+  @media (max-width: var.$tablet) {
+    padding: var.$spacing-lg var.$spacing-sm;
   }
 }
 
@@ -44,7 +38,7 @@ input {
 }
 
 svg {
-  font-size: 2rem;
+  font-size: 1.8rem;
 }
 
 @include meta.load-css("header");
